api get registro de tecnicos
