# swagger_server/swagger/swagger.yaml
@@ -675,6 +675,58 @@ paths:
               schema:
                 $ref: "#/components/schemas/ResponseError"
       x-openapi-router-controller: swagger_server.controllers.technical_controller.TechnicalView
+  /technical_record:
+    get:
+      tags:
+      - Technical
+      summary: Obtiene todos los registros tecnicos
+      description: Devuelve todos los registros tecnicos de la base
+      operationId: get_tech_record
+      parameters:
+        - name: externalTransactionId
+          in: header
+          required: true
+          schema:
+            type: string
+            example: "fcea920f7412b5da7be0cf42b8c93759"
+        - name: channel
+          in: header
+          required: true
+          schema:
+            type: string
+            example: "TECHNICAL_MOVIL"
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GenericResponse"
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseError"
+        "404":
+          description: Not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseError"
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseError"
+        "503":
+          description: Service unavailable
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseError"
+      x-openapi-router-controller: swagger_server.controllers.technical_controller.TechnicalView
 components:
   schemas:
     RequestPostTechnicalControl:
@@ -924,6 +976,9 @@ components:
     TaskData:
       type: object
       properties:
+        location_id:
+          type: integer
+          example: 1
         name:
           type: string
           example: "TAREA INSTALACION"
